[package]
name = "chris-math"
version = "0.1.0"
edition = "2021"
authors=["shadawo <ribe.thibaut@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen="0.2.78"
sha2 = "0.10.2"
hex-literal = "0.3.4"
aes-gcm-siv = "0.10.3"
aes="0.8.1"
hex="0.4.3"
aes-gcm="0.9.4"
pbkdf2 = "0.8.0"
rand_core = { version = "0.6", features = ["std"] }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"